--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <!--
     CreateFile stuff
     -->
+    <string name="textView_file_name">Name of the file</string>
+    <string name="hint_file_name">Type the name of the file</string>
     <string name="textView_main_password">Main password</string>
     <string name="hint_main_password">Give a main password for the password file</string>
     <string name="hint_main_password_confirmation">Re-type the main password</string>
